--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="container-sm d-flex align-items-center justify-content-center vh-100">
-    <div class="row p-1">
+    <div class="row d-block">
         <!-- Progressbar -->
         <ng-container *ngIf="progressbar_View">
-            <div class="col-12 mb-1">
+            <div class="col mb-1">
                 <div style="width: 18rem; margin-left: auto; margin-right: auto;">
                     <ngb-progressbar [showValue]="true" [type]="progressbar_Type" [value]="progressbar_Value"
                         [max]="100">
@@ -13,7 +13,7 @@
         <!-- /Progressbar -->
 
         <!-- Form -->
-        <div class="col-12 shadow p-3 mb-5 bg-white rounded">
+        <div class="col shadow p-3 mb-5 bg-white rounded">
             <div class="card" style="width: 18rem; margin-left: auto; margin-right: auto;">
                 <!-- Card Header -->
                 <div class="card-body d-flex align-items-center flex-column">
@@ -45,7 +45,8 @@
                                     <label for="newPassWord">新密碼</label>
                                     <div class="input-group input-group-md">
                                         <input [type]="password_Type" id="newPassWord" class="form-control"
-                                            formControlName="newPassWord" minlength="3" maxlength="20" required>
+                                            formControlName="newPassWord" minlength="3" maxlength="20"
+                                            autocomplete="false" required>
                                         <div class="input-group-prepend">
                                             <span class="input-group-text" (click)="toggle_password_Type();"
                                                 style="cursor: pointer;">
@@ -57,7 +58,8 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="code">代碼</label>
-                                    <input type="text" id="code" class="form-control mt-2" formControlName="code" required>
+                                    <input type="text" id="code" class="form-control mt-2" formControlName="code"
+                                        required>
                                 </div>
                             </ng-container>
                         </ng-container>
@@ -67,7 +69,8 @@
                                 <label for="passWord">密碼</label>
                                 <div class="input-group input-group-md">
                                     <input [type]="password_Type" id="passWord" class="form-control"
-                                        formControlName="passWord" minlength="3" maxlength="20" required>
+                                        formControlName="passWord" minlength="3" maxlength="20" autocomplete="false"
+                                        required>
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" (click)="toggle_password_Type();"
                                             style="cursor: pointer;">
@@ -89,7 +92,7 @@
                                 </ng-template>
                             </button>
                             <button type="submit" class="btn btn-primary">
-                            <!-- <button type="submit" class="btn btn-primary" [disabled]="!fbGroup.valid"> -->
+                                <!-- <button type="submit" class="btn btn-primary" [disabled]="!fbGroup.valid"> -->
                                 <ng-container *ngIf="isEmail; else btn_Login">送出</ng-container>
                                 <ng-template #btn_Login>登入</ng-template>
                             </button>
