--- a/client/src/app/components/sidebar/sidebar.component.html
+++ b/client/src/app/components/sidebar/sidebar.component.html
@@ -1,33 +1,33 @@
 <div class="d-flex">
     <ul class="nav px-3">
         <li class="nav-item text-nowrap">
-            <a class="nav-link text-white" routerLink="./../login">
+            <a class="nav-link text-white" routerLink="/">
                 <i class="bi bi-2-square text-white"></i>
                 首頁
             </a>
         </li>
         <li class="nav-item text-nowrap">
-            <a class="nav-link text-white" routerLink="./../login">
+            <a class="nav-link text-white" routerLink="Work">
                 <i class="bi bi-2-square text-white"></i>
                 工時
             </a>
         </li>
         <li class="nav-item text-nowrap">
-            <a class="nav-link text-white" routerLink="./../login">
+            <a class="nav-link text-white" routerLink="Repair">
                 <i class="bi bi-2-square text-white"></i>
                 維修
             </a>
         </li>
         <li class="nav-item text-nowrap">
-            <a class="nav-link text-white" routerLink="./employee">
+            <a class="nav-link text-white" routerLink="Employee">
                 <i class="bi bi-2-square text-white"></i>
-                員工s
+                員工
             </a>
         </li>
     </ul>
     <ul class="nav px-3">
         <li class="nav-item text-nowrap">
-            <a class="nav-link text-white" routerLink="./../login">
+            <a class="nav-link text-white" (click)="logout();">
                 <i class="bi bi-2-square text-white"></i>
                 登出
             </a>
