--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,7 +2,4 @@
     <app-loading></app-loading>
 </ng-container>
 
-{{loading_val}}
-
-<router-outlet (activate)="onActivate($event)" (deactivate)="onDeactivate($event)">
-</router-outlet>
+<router-outlet (activate)="onActivate($event)" (deactivate)="onDeactivate($event)"></router-outlet>
