--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-sm d-flex align-items-center justify-content-center vh-100">
     <div class="row d-block">
-        <!-- Progressbar -->
         <ng-container *ngIf="progressbar_View">
+            <!-- Progressbar -->
             <div class="col mb-1">
                 <div style="width: 18rem; margin-left: auto; margin-right: auto;">
                     <ngb-progressbar [showValue]="true" [type]="progressbar_Type" [value]="progressbar_Value"
@@ -9,23 +9,32 @@
                     </ngb-progressbar>
                 </div>
             </div>
+            <!-- /Progressbar -->
         </ng-container>
-        <!-- /Progressbar -->
 
         <!-- Form -->
         <div class="col shadow p-3 mb-5 bg-white rounded">
             <div class="card" style="width: 18rem; margin-left: auto; margin-right: auto;">
                 <!-- Card Header -->
                 <div class="card-body d-flex align-items-center flex-column">
+                    <!-- Title -->
                     <h1 class="card-title text-danger">Tailyn</h1>
-                    <div class="alert alert-danger p-1 w-75 text-center mt-2" role="alert"
-                        [class.d-none]="fbError.account && fbError.email && fbError.system ? true : false">
-                        <small class="form-text" *ngIf="!fbError.account">工號 或 密碼 錯誤</small>
-                        <small class="form-text" *ngIf="!fbError.email">工號 或 信箱 錯誤</small>
-                        <small class="form-text" *ngIf="!fbError.system">系統錯誤，稍後在試</small>
+                    <div class="alert-danger alert p-1 w-75 text-center mt-2" role="alert"
+                        [class.d-none]="(status.account) && (status.email) && (status.system) && (status.code) ? true : false">
+                        <small class="form-text" *ngIf="!status.account">工號 或 密碼 錯誤</small>
+                        <small class="form-text" *ngIf="!status.email">工號 或 信箱 錯誤</small>
+                        <small class="form-text" *ngIf="!status.system">系統錯誤，稍後在試</small>
+                        <small class="form-text" *ngIf="!status.code">代碼輸入錯誤</small>
                     </div>
+
+                    <ng-container *ngIf="forms.email && status.counter">
+                        <div class="alert-warning alert p-1 w-75 text-center mt-2" role="alert">
+                            <small class="form-text" *ngIf="status.counter">{{status.counter}} 分鐘後再試</small>
+                        </div>
+                    </ng-container>
                 </div>
                 <!-- /Card Header -->
+
                 <!-- Card Body -->
                 <div class="card-body">
                     <form [formGroup]="fbGroup" (ngSubmit)="onSubmit();">
@@ -34,34 +43,36 @@
                             <input type="text" id="jNumber" class="form-control mt-2" formControlName="jNumber"
                                 minlength="3" maxlength="10" required>
                         </div>
-                        <ng-container *ngIf="isEmail; else passWord_Input">
-                            <div class="form-group">
-                                <label for="email">信箱</label>
-                                <input type="email" id="email" class="form-control mt-2" formControlName="email"
-                                    minlength="3" maxlength="40" required>
-                            </div>
-                            <ng-container *ngIf="isCode">
-                                <div class="form-group mb-2">
-                                    <label for="newPassWord">新密碼</label>
-                                    <div class="input-group input-group-md">
-                                        <input [type]="password_Type" id="newPassWord" class="form-control"
-                                            formControlName="newPassWord" minlength="3" maxlength="20"
-                                            autocomplete="false" required>
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text" (click)="toggle_password_Type();"
-                                                style="cursor: pointer;">
-                                                <i
-                                                    [ngClass]="password_Type == 'text' ? 'bi bi-eye-fill' : 'bi bi-eye-slash-fill'"></i>
-                                            </span>
+                        <ng-container *ngIf="forms.email else passWord_Input">
+                            <fieldset [disabled]="status.counter">
+                                <div class="form-group">
+                                    <label for="email">信箱</label>
+                                    <input type="email" id="email" class="form-control mt-2" formControlName="email"
+                                        minlength="6" maxlength="40" required>
+                                </div>
+                                <ng-container *ngIf="forms.code">
+                                    <div class="form-group mb-2">
+                                        <label for="newPassWord">新密碼</label>
+                                        <div class="input-group input-group-md">
+                                            <input [type]="password_Type" id="newPassWord" class="form-control"
+                                                formControlName="newPassWord" minlength="3" maxlength="20"
+                                                autocomplete="false" required>
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text" (click)="toggle_password_Type();"
+                                                    style="cursor: pointer;">
+                                                    <i
+                                                        [ngClass]="password_Type == 'text' ? 'bi bi-eye-fill' : 'bi bi-eye-slash-fill'"></i>
+                                                </span>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="code">代碼</label>
-                                    <input type="text" id="code" class="form-control mt-2" formControlName="code"
-                                        required>
-                                </div>
-                            </ng-container>
+                                    <div class="form-group">
+                                        <label for="code">代碼</label>
+                                        <input type="text" id="code" class="form-control mt-2" formControlName="code"
+                                            required>
+                                    </div>
+                                </ng-container>
+                            </fieldset>
                         </ng-container>
                         <!-- PassWord -->
                         <ng-template #passWord_Input>
@@ -72,7 +83,7 @@
                                         formControlName="passWord" minlength="3" maxlength="20" autocomplete="false"
                                         required>
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text" (click)="toggle_password_Type();"
+                                        <span class="input-group-text" (click)="toggle_password_Type()"
                                             style="cursor: pointer;">
                                             <i
                                                 [ngClass]="password_Type == 'text' ? 'bi bi-eye-fill' : 'bi bi-eye-slash-fill'"></i>
@@ -83,19 +94,28 @@
                         </ng-template>
                         <!-- Footer -->
                         <footer class="d-flex justify-content-between mt-3">
-                            <button type="button" class="btn btn-outline-secondary" (click)="email();">
-                                <ng-container *ngIf="isEmail; else btn_Email">
+                            <button type="button" class="btn btn-outline-secondary" (click)="toggle_Form()">
+                                <ng-container *ngIf="forms.email; else btn_Email">
                                     返回
                                 </ng-container>
                                 <ng-template #btn_Email>
                                     忘記密碼
                                 </ng-template>
                             </button>
-                            <button type="submit" class="btn btn-primary">
-                                <!-- <button type="submit" class="btn btn-primary" [disabled]="!fbGroup.valid"> -->
-                                <ng-container *ngIf="isEmail; else btn_Login">送出</ng-container>
-                                <ng-template #btn_Login>登入</ng-template>
-                            </button>
+
+                            <ng-container *ngIf="forms.email; else btn_Login">
+                                <button type="submit" class="btn btn-primary"
+                                    [disabled]="(fb_Value['jNumber'].valid) && (fb_Value['newPassWord'].valid) && (fb_Value['email'].valid) && (fb_Value['code'].valid) && (status.counter == 0) ? false : true">
+                                    送出
+                                </button>
+                            </ng-container>
+
+                            <ng-template #btn_Login>
+                                <button type="submit" class="btn btn-primary"
+                                    [disabled]="(fb_Value['jNumber'].valid) && (fb_Value['passWord'].valid) ? false : true">
+                                    登入
+                                </button>
+                            </ng-template>
                         </footer>
                         <!-- /Footer -->
                     </form>
