--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,9 +1,4 @@
-<nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <strong class="navbar-brand col-md-2 col-lg-2 mr-0 px-3">Tailyn</strong>
-  <!-- <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse"
-    data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon" (click)="siedeBar_Controller();"></span>
-  </button> -->
-
+<nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap shadow p-0">
+  <strong class="col-md-2 col-lg-2 mr-0 px-3 bg-dark text-danger">Tailyn</strong>
   <app-sidebar></app-sidebar>
 </nav>
