--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,6 +1,6 @@
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+@import "~bootstrap/scss/bootstrap";
 
 *
 {
@@ -10,7 +10,7 @@
 }
 
 body {
-  font-size: .875rem;
+  // font-size: .875rem;
 }
 
 a
