--- a/client/src/app/components/employee/employee.component.html
+++ b/client/src/app/components/employee/employee.component.html
@@ -1,6 +1,6 @@
-<app-content-header (refresh_)="refresh()" (search_)="search()" (open_)="open()" (update_)="update()"
+<!-- <app-content-header (refresh_)="refresh()" (search_)="search()" (open_)="open()" (update_)="update()"
   (delete_)="delete()" [user_]="user" [fb_Value_]="fb_Value['e_Lv'].value">
-</app-content-header>
+</app-content-header> -->
 <!-- Form -->
 <div class="container-lg border border-dark p-2">
   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, nam.
