--- a/client/src/app/components/employee/employee.component.html
+++ b/client/src/app/components/employee/employee.component.html
@@ -28,125 +28,111 @@
 </table>
 <!-- /Table -->
 
-<!-- Modal -->
-<app-modal [fbGroup]="fbGroup" (onSubmit)="onSubmit()">
+<!-- Template -->
+<ng-template #form_>
+  <form [formGroup]="fbGroup" (ngSubmit)="onSubmit()" #form="ngForm">
+    <!-- Name -->
+    <div class="form-group row">
+      <label for="e_Name" class="col-sm-2 col-form-label"
+        *ngIf="!errorValidators['e_Name'].length; else e_Name">姓名</label>
 
-  <ng-template #forms>
-    <form [formGroup]="fbGroup" (ngSubmit)="onSubmit()" #form="ngForm">
-      <!-- Name -->
-      <div class="form-group row">
-        <label for="e_Name" class="col-sm-2 col-form-label"
-          *ngIf="!errorValidators['e_Name'].length; else e_Name">姓名</label>
+      <ng-template #e_Name>
+        <label for="name" class="col-sm-2 col-form-label text-danger">{{ errorValidators['e_Name'] }}</label>
+      </ng-template>
 
-        <ng-template #e_Name>
-          <label for="name" class="col-sm-2 col-form-label text-danger">{{ errorValidators['e_Name'] }}</label>
-        </ng-template>
-
-        <div class="col-sm-10">
-          <input type="text" id="e_Name" class="form-control" formControlName="e_Name" placeholder="姓名"
-            (blur)="inputValidators(fbGroup, 'e_Name')">
-        </div>
+      <div class="col-sm-10">
+        <input type="text" id="e_Name" class="form-control" formControlName="e_Name" placeholder="姓名"
+          (blur)="inputValidators(fbGroup, 'e_Name')">
       </div>
+    </div>
 
-      <!-- Job Number -->
-      <div class="form-group row">
-        <label for="e_JobNumber" class="col-sm-2 col-form-label"
-          *ngIf="!errorValidators['e_JobNumber'].length; else e_JobNumber">姓名</label>
+    <!-- Job Number -->
+    <div class="form-group row">
+      <label for="e_JobNumber" class="col-sm-2 col-form-label"
+        *ngIf="!errorValidators['e_JobNumber'].length; else e_JobNumber">姓名</label>
 
-        <ng-template #e_JobNumber>
-          <label for="e_JobNumber" class="col-sm-2 col-form-label text-danger">{{ errorValidators['e_JobNumber']
-            }}</label>
-        </ng-template>
+      <ng-template #e_JobNumber>
+        <label for="e_JobNumber" class="col-sm-2 col-form-label text-danger">{{ errorValidators['e_JobNumber']
+          }}</label>
+      </ng-template>
 
-        <div class="col-sm-10">
-          <input type="text" id="e_JobNumber" class="form-control" formControlName="e_JobNumber" placeholder="工號"
-            (blur)="inputValidators(fbGroup, 'e_JobNumber')">
-        </div>
+      <div class="col-sm-10">
+        <input type="text" id="e_JobNumber" class="form-control" formControlName="e_JobNumber" placeholder="工號"
+          (blur)="inputValidators(fbGroup, 'e_JobNumber')">
       </div>
+    </div>
 
-      <!-- Password -->
-      <div class="form-group row">
-        <label for="e_PassWord" class="col-sm-2 col-form-label"
-          *ngIf="!errorValidators['e_PassWord'].length; else e_PassWord">密碼</label>
+    <!-- Password -->
+    <div class="form-group row">
+      <label for="e_PassWord" class="col-sm-2 col-form-label"
+        *ngIf="!errorValidators['e_PassWord'].length; else e_PassWord">密碼</label>
 
-        <ng-template #e_PassWord>
-          <label for="e_PassWord" class="col-sm-2 col-form-label text-danger">{{ errorValidators['e_PassWord']
-            }}</label>
-        </ng-template>
+      <ng-template #e_PassWord>
+        <label for="e_PassWord" class="col-sm-2 col-form-label text-danger">{{ errorValidators['e_PassWord']
+          }}</label>
+      </ng-template>
 
-        <div class="col-sm-10">
-          <input type="password" id="passWord" class="form-control" formControlName="e_PassWord" placeholder="密碼"
-            (blur)="inputValidators(fbGroup, 'e_PassWord')" autocomplete="false">
-        </div>
+      <div class="col-sm-10">
+        <input type="password" id="passWord" class="form-control" formControlName="e_PassWord" placeholder="密碼"
+          (blur)="inputValidators(fbGroup, 'e_PassWord')" autocomplete="false">
       </div>
+    </div>
 
-      <!-- ConfirmPassword -->
-      <div class="form-group row">
-        <label for="e_ConfirmPassword" class="col-sm-2 col-form-label"
-          *ngIf="!errorValidators['e_ConfirmPassword'].length && !fbGroup.hasError('passwordMatch'); else e_PassWord">密碼</label>
+    <!-- ConfirmPassword -->
+    <div class="form-group row">
+      <label for="e_ConfirmPassword" class="col-sm-2 col-form-label"
+        *ngIf="!errorValidators['e_ConfirmPassword'].length && !fbGroup.hasError('passwordMatch'); else e_PassWord">密碼</label>
 
-        <ng-template #e_ConfirmPassword>
-          <label for="e_ConfirmPassword" class="col-sm-2 col-form-label text-danger">
-            {{ errorValidators['e_ConfirmPassword'] }}
-            <span class="text-danger h6"
-              *ngIf="fb_Value['e_ConfirmPassword'].dirty && fbGroup.hasError('passwordMatch')">錯誤</span>
-          </label>
-        </ng-template>
+      <ng-template #e_ConfirmPassword>
+        <label for="e_ConfirmPassword" class="col-sm-2 col-form-label text-danger">
+          {{ errorValidators['e_ConfirmPassword'] }}
+          <span class="text-danger h6"
+            *ngIf="fb_Value['e_ConfirmPassword'].dirty && fbGroup.hasError('passwordMatch')">錯誤</span>
+        </label>
+      </ng-template>
 
-        <div class="col-sm-10">
-          <input type="password" id="e_ConfirmPassword" class="form-control" formControlName="e_ConfirmPassword"
-            placeholder="確認密碼" (blur)="inputValidators(fbGroup, 'e_ConfirmPassword')" autocomplete="false">
-        </div>
+      <div class="col-sm-10">
+        <input type="password" id="e_ConfirmPassword" class="form-control" formControlName="e_ConfirmPassword"
+          placeholder="確認密碼" (blur)="inputValidators(fbGroup, 'e_ConfirmPassword')" autocomplete="false">
       </div>
+    </div>
 
-      <!-- Email -->
-      <div class="form-group row">
-        <label for="e_Email" class="col-sm-2 col-form-label"
-          *ngIf="!errorValidators['e_Email'].length; else e_Email">信箱</label>
+    <!-- Email -->
+    <div class="form-group row">
+      <label for="e_Email" class="col-sm-2 col-form-label"
+        *ngIf="!errorValidators['e_Email'].length; else e_Email">信箱</label>
 
-        <ng-template #e_Email>
-          <label for="e_Email" class="col-sm-2 col-form-label text-danger">{{ errorValidators['e_Email']
-            }}</label>
-        </ng-template>
+      <ng-template #e_Email>
+        <label for="e_Email" class="col-sm-2 col-form-label text-danger">{{ errorValidators['e_Email']
+          }}</label>
+      </ng-template>
 
-        <div class="col-sm-10">
-          <input type="email" id="e_Email" class="form-control" formControlName="e_Email" placeholder="信箱"
-            (blur)="inputValidators(fbGroup, 'e_Email')">
-        </div>
+      <div class="col-sm-10">
+        <input type="email" id="e_Email" class="form-control" formControlName="e_Email" placeholder="信箱"
+          (blur)="inputValidators(fbGroup, 'e_Email')">
       </div>
+    </div>
 
-      <!-- Level -->
-      <div class="form-group row">
-        <label for="e_Lv" class="col-sm-2 col-form-label">權限</label>
+    <!-- Level -->
+    <div class="form-group row">
+      <label for="e_Lv" class="col-sm-2 col-form-label">權限</label>
 
-        <div class="col-sm-10">
-          <select id="e_Lv" class="form-control text-center" formControlName="e_Lv">
-            <option value="1">普通</option>
-            <option value="2">中級</option>
-            <option value="3">高級</option>
-          </select>
-        </div>
+      <div class="col-sm-10">
+        <select id="e_Lv" class="form-control text-center" formControlName="e_Lv">
+          <option value="1">普通</option>
+          <option value="2">中級</option>
+          <option value="3">高級</option>
+        </select>
       </div>
+    </div>
 
-      <!-- <div class="mb-2">
-      <label for="dateOfBirth">權限</label>
-      <div class="input-group">
-        <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
-        <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
-      </div>
-    </div> -->
-    </form>
-  </ng-template>
-
-  <ngb-alert *ngIf="!alert.status" [type]="alert.type" (click)="alert.status = true" animation="true"
-    [dismissible]="true">
-    <strong>{{ alert.message }}</strong>
-  </ngb-alert>
-
-  <ng-template #contents>
-    <td>Andy</td>
-    <td>35</td>
-  </ng-template>
-
-</app-modal>
-<!-- /Modal -->
+    <!-- <div class="mb-2">
+    <label for="dateOfBirth">權限</label>
+    <div class="input-group">
+      <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
+      <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
+    </div>
+  </div> -->
+  </form>
+</ng-template>
+<!-- /Template -->
