--- a/client/src/app/components/modal/modal.component.html
+++ b/client/src/app/components/modal/modal.component.html
@@ -2,13 +2,23 @@
   <div class="modal-header text-center">
     <h4 class="modal-title">Modal</h4>
   </div>
+
   <div class="modal-body">
   </div>
 
-  <ng-template appAlerts></ng-template>
+  <app-alert></app-alert>
+
+
+  <ng-container ng></ng-container>
+  
+  
   
   <div class="modal-footer d-flex justify-content-between">
     <button type="button" class="btn btn-outline-secondary" (click)="d('cancel')">取消</button>
-    <button type="submit" class="btn btn-outline-dark">確定</button>
+    <button type="submit" class="btn btn-outline-dark" (click)="open()">確定</button>
   </div>
 </ng-template>
+
+<ng-template appAlerts></ng-template>
+
+
