--- a/client/src/app/components/alert/alert.component.html
+++ b/client/src/app/components/alert/alert.component.html
@@ -1,3 +1,3 @@
-<ngb-alert *ngIf="false" [type]="types" (click)="status = false" animation="true" [dismissible]="true">
+<ngb-alert *ngIf="status" [type]="types" (click)="status = false" animation="true" [dismissible]="true">
     <strong>{{ messages }}</strong>
 </ngb-alert>
